Fix HTML injection security hole
This patch rewrites the popup and desktop notification tweet rendering code
to use DOM manipulations to transform tweets rather than regexes, preventing
HTML injection issues.

Note that the desktop notification rendering code still uses HTML string
manipulation for all but the actual replacement of links in the tweet.

--- a/tweets_notifier.html
+++ b/tweets_notifier.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <script type="text/javascript" src="lib/3rdparty/jquery.js"></script>
+  <script type="text/javascript" src="lib/tweet_transforms.js"></script>
   <script type="text/javascript" src="lib/tweets_assembler.js"></script>
 
   <link rel="stylesheet" type="text/css" href="css/injectedTweets.css" />
