--- a/background.html
+++ b/background.html
@@ -474,7 +474,9 @@ TweetManager.prototype = {
       };
       injectHelper('script', 'lib/3rdparty/jquery.js', true, function() {
         injectHelper('css', 'css/injectedTweets.css', true, function() {
-          injectHelper('script', 'lib/tweets_assembler.js', true);
+          injectHelper('script', 'lib/tweet_transforms.js', true, function() {
+            injectHelper('script', 'lib/tweets_assembler.js', true);
+          });
         });
       });
     }
